tests/type_args_fatal_assertion_regression/type_args_fatal_assertion_regression.exp
Error ----------------------------------------------------------------------------------------------------- test.js:10:5

Cannot use `V` [1] with more than 1 type argument. [extra-type-arg]

   test.js:10:5
   10| (x: V);
           ^

References:
   test.js:7:8
    7| class T<U> {}
              ^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:12:2

Cannot cast `42` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:12:2
   12| (42: empty); // Error: number ~> empty
        ^^ [1]

References:
   test.js:12:6
   12| (42: empty); // Error: number ~> empty
            ^^^^^ [2]



Found 2 errors
